--- a/server/package.json
+++ b/server/package.json
@@ -11,31 +11,40 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "googleapis": "^128.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3",
+    "mongoose": "^7.8.7",
+    "multer": "^2.0.2",
     "uploadthing": "^5.7.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.16",
-    "@types/express": "^4.17.21",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
     "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.9",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": ">=16.0.0"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
