--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/studio-sync
-JWT_SECRET=your_secure_jwt_secret_here
-YOUTUBE_API_KEY=your_youtube_api_key_here
-UPLOADTHING_API_KEY=your_uploadthing_api_key_here
-NODE_ENV=development
+MONGO_URI=your_mongodb_uri
+JWT_SECRET=your_jwt_secret
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI=http://localhost:5000/api/auth/google/callback
